samples/_failures_safe/1761723422_ad64cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f248688a.c: In function ‘main’:
./samples/SAFE/__tmp_f248688a.c:153:5: error: expected expression at end of input
  153 |     transitions_stack[5] = (Transition){2,
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f248688a.c:153:5: error: expected declaration or statement at end of input
